--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -5,11 +5,15 @@ import { getLangFromUrl, getTranslations } from '@i18n';
 import { getMyProfile, listMyInvites } from '@backend/crud';
 import { ProjectsHome } from '@apps/dashboard-projects';
 import { listMyProjectsExtended } from '@backend/helpers';
+import { setRedirectUrl } from '../../../backend/urlRedirect';
 
 const lang = getLangFromUrl(Astro.url);
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase) return Astro.redirect(`/${lang}/sign-in`);
+if (!supabase) {
+  setRedirectUrl(Astro.url.pathname);
+  return Astro.redirect(`/${lang}/sign-in`);
+}
 
 const me = await getMyProfile(supabase);
 if (me.error || !me.data) {
