--- a/src/pages/[lang]/account/me.astro
+++ b/src/pages/[lang]/account/me.astro
@@ -4,25 +4,26 @@ import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getTranslations } from '@i18n';
 import { getMyProfile } from '@backend/crud/profiles';
 import { AccountPreferences } from '@apps/dashboard-account/AccountPreferences';
+import { setRedirectUrl } from '@backend/urlRedirect';
 
 const i18n = getTranslations(Astro.request, 'dashboard-account');
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase)
+if (!supabase) {
+  setRedirectUrl(Astro.url.pathname);
   return Astro.redirect(`/${i18n.lang}/sign-in`);
+}
 
 const { error, data } = await getMyProfile(supabase);
 
-if (error) { 
+if (error) {
   const error = await fetch(`${Astro.url}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  return new Response(error.body, { headers: error.headers, status: 500 });
 }
 ---
+
 <BaseLayout title={i18n.t['Account Preferences']}>
-  <AccountPreferences
-    client:load
-    i18n={i18n}
-    profile={data} />
+  <AccountPreferences client:load i18n={i18n} profile={data} />
 </BaseLayout>
 
 <style>
