--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -6,12 +6,15 @@ import { getLangFromUrl, getTranslations } from '@i18n';
 import { ImageAnnotation } from '@apps/annotation-image';
 import { TextAnnotation } from '@apps/annotation-text';
 import { getDocumentInContext } from '@backend/helpers';
+import { setRedirectUrl } from '@backend/urlRedirect';
 
 const lang = getLangFromUrl(Astro.url);
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
-if (!supabase)
+if (!supabase) {
+  setRedirectUrl(Astro.url.pathname);
   return Astro.redirect(`/${lang}/sign-in`);
+}
 
 const contextId = Astro.params.context;
 const documentId = Astro.params.document;
@@ -19,19 +22,19 @@ const documentId = Astro.params.document;
 if (!contextId || !documentId) {
   // Should never happen
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { headers: error.headers, status: 404 }); 
+  return new Response(error.body, { headers: error.headers, status: 404 });
 }
 
 // Will return empty if this user has no access priviliges
 const document = await getDocumentInContext(supabase, documentId, contextId);
-if (document.error || !document.data) {
+if (document.error || !document.data) {
   // https://javascript.plainenglish.io/return-custom-404-responses-in-astro-b844b0e0146d
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { 
+  return new Response(error.body, {
     headers: { 'Content-Type': 'text/html;charset=utf-8' },
-    status: 404, 
-    statusText: 'Not Found' 
-  }); 
+    status: 404,
+    statusText: 'Not Found',
+  });
 }
 
 // Compute realtime channel key
@@ -50,27 +53,32 @@ if (document.data.content_type === 'text/plain') {
 } else if (document.data.content_type === 'application/pdf') {
   viewer = 'PDF';
 } else if (document.data.meta_data?.protocol === 'IIIF_IMAGE') {
-  viewer ='OPENSEADRAGON';
+  viewer = 'OPENSEADRAGON';
 } else {
   // Should never happen
   const error = await fetch(`${Astro.url}/500`);
-  return new Response(error.body, { headers: error.headers, status: 500 }); 
+  return new Response(error.body, { headers: error.headers, status: 500 });
 }
 ---
-<BaseLayout title="Annotation">
-  {viewer === 'OPENSEADRAGON' ? (
-    <ImageAnnotation 
-      client:only
-      i18n={getTranslations(Astro.request, 'annotation-image')}
-      document={document.data}
-      channelId={channelId} />
-  ) : (
-    <TextAnnotation 
-      client:only
-      i18n={getTranslations(Astro.request, 'annotation-text')} 
-      document={document.data}
-      channelId={channelId} />
-  )}
+
+<BaseLayout title='Annotation'>
+  {
+    viewer === 'OPENSEADRAGON' ? (
+      <ImageAnnotation
+        client:only
+        i18n={getTranslations(Astro.request, 'annotation-image')}
+        document={document.data}
+        channelId={channelId}
+      />
+    ) : (
+      <TextAnnotation
+        client:only
+        i18n={getTranslations(Astro.request, 'annotation-text')}
+        document={document.data}
+        channelId={channelId}
+      />
+    )
+  }
 </BaseLayout>
 
 <style>
