Fixes header/footer layout for annotation views

--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -1,5 +1,9 @@
 @import '@annotorious/react/annotorious-react.css';
 
+.ia-desktop {
+  height: 100%;
+}
+
 .ia-osd-container {
   height: 100%;
   position: relative;
