--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -71,59 +71,43 @@ const useHeader = config.branding.top_logos_enabled;
 </html>
 <style define:vars={{ siteColor }}>
   body {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow-y: hidden;
-    height: calc(100% - 105px);
+    height: 100%;
   }
 
   .slot-container {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    position: relative;
+    bottom: 0;
+    margin: 50px 0;
+    position: absolute;
+    top: 0;
     width: 100%;
   }
 
   header {
-    width: 100%;
-    justify-content: space-between;
+    align-items: center;
+    background-color: var(--gray-900);
     border-bottom: 1px solid var(--gray-200);
     box-sizing: border-box;
     display: flex;
-    align-items: center;
     height: 50px;
+    justify-content: space-between;
     padding: 0 40px;
-    background-color: var(--gray-900);
+    position: fixed;
+    width: 100%;
     z-index: 1000;
-    position: sticky;
-    top: 0;
-    left: 0;
   }
 
   footer {
-    border-top: 1px solid var(--gray-200);
-    box-sizing: border-box;
-    display: flex;
     align-items: center;
-    height: 50px;
-    padding: 0 40px;
     background-color: var(--gray-900);
-    z-index: 1000;
-    position: sticky;
+    border-top: 1px solid var(--gray-200);
     bottom: 0;
-    left: 0;
-    justify-content: space-between;
-  }
-
-  main {
-    box-sizing: border-box;
     display: flex;
-    flex-grow: 1;
-    padding: 0;
-    position: relative;
+    height: 50px;
+    justify-content: space-between;
+    padding: 0 40px;
+    position: fixed;
     width: 100%;
+    z-index: 1000;
   }
 
   .branding-container {
