--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -1,11 +1,12 @@
 ---
 import crypto from 'crypto';
-import BaseLayout from '@layouts/BaseLayout.astro';
+import HeaderLayout from '@layouts/HeaderLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { ImageAnnotation } from '@apps/annotation-image';
 import { TextAnnotation } from '@apps/annotation-text';
 import { getDocumentInContext } from '@backend/helpers';
+import config from 'src/config.json';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -33,6 +34,8 @@ if (document.error || !document.data) {
   });
 }
 
+const message = config.branding.footer_message;
+
 // Compute realtime channel key
 const secret = import.meta.env.ROOM_SECRET || '';
 const hash = crypto.createHash('sha256');
@@ -57,35 +60,26 @@ if (document.data.content_type === 'text/plain') {
 }
 ---
 
-<BaseLayout title='Annotation'>
-  <div class='container'>
-    {
-      viewer === 'OPENSEADRAGON' ? (
-        <ImageAnnotation
-          client:only
-          i18n={getTranslations(Astro.request, 'annotation-image')}
-          document={document.data}
-          channelId={channelId}
-        />
-      ) : (
-        <TextAnnotation
-          client:only
-          i18n={getTranslations(Astro.request, 'annotation-text')}
-          document={document.data}
-          channelId={channelId}
-        />
-      )
-    }
-  </div>
-</BaseLayout>
+<HeaderLayout title='Annotation' message={message}>
+  {
+    viewer === 'OPENSEADRAGON' ? (
+      <ImageAnnotation
+        client:only
+        i18n={getTranslations(Astro.request, 'annotation-image')}
+        document={document.data}
+        channelId={channelId}
+      />
+    ) : (
+      <TextAnnotation
+        client:only
+        i18n={getTranslations(Astro.request, 'annotation-text')}
+        document={document.data}
+        channelId={channelId}
+      />
+    )
+  }
+</HeaderLayout>
 
 <style>
-  .container.image {
-    bottom: 0;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
+
 </style>
