--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -76,6 +76,8 @@ const useHeader = config.branding.top_logos_enabled;
 
   .slot-container {
     bottom: 0;
+    display: flex;
+    flex-direction: row;
     margin: 50px 0;
     position: absolute;
     top: 0;
