--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -8,8 +8,8 @@ export interface Props {
   title: string;
 }
 
-import Footer from '../dynamic-elements/Footer';
-import Header from '../dynamic-elements/Header';
+import Footer from './Footer';
+import Header from './Header';
 
 const { title } = Astro.props;
 
