--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 
 const { t } = getTranslations(Astro.request, 'error');
 ---
-<BaseLayout title="INeedAName | Not Found">
+<BaseLayout title="Recogito | Not Found">
   <div class="container" style="align-items: center; bottom: 0; display: flex; justify-content: center; position: absolute; top: 0; width: 100%;">
     <div class="column">
       <h1 style="margin: 0; padding: 0.2em 0;">404 Not Found</h1>
