--- a/src/pages/500.astro
+++ b/src/pages/500.astro
@@ -4,7 +4,7 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 
 const { t } = getTranslations(Astro.request, 'error');
 ---
-<BaseLayout title="INeedAName | Error">
+<BaseLayout title="Recogito | Error">
   <div class="container">
     <div class="column">
       <h1>500 Error</h1>
