--- a/src/pages/[lang]/projects/[project]/assignments/index.astro
+++ b/src/pages/[lang]/projects/[project]/assignments/index.astro
@@ -5,14 +5,12 @@ import { getMyProfile } from '@backend/crud';
 import { getLangFromUrl, getTranslations } from '@i18n';
 import { getProjectExtended, listDocumentsInProject } from '@backend/helpers';
 import { ProjectAssignments } from '@apps/project-assignments';
-import { setRedirectUrl } from '@backend/urlRedirect';
 
 const lang = getLangFromUrl(Astro.url);
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase) {
-  setRedirectUrl(Astro.url.pathname);
-  return Astro.redirect(`/${lang}/sign-in`);
+  return Astro.redirect(`/${lang}/sign-in?redirect-to=${Astro.url.pathname}`);
 }
 
 const profile = await getMyProfile(supabase);
