--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -17,6 +17,7 @@ const siteColor = config.branding.site_color;
 const textColor = config.branding.contrast_color;
 const useFooter = config.branding.bottom_logos_enabled;
 const useHeader = config.branding.top_logos_enabled;
+const backgroundColor = config.branding.background_color;
 ---
 
 <!DOCTYPE html>
@@ -69,7 +70,7 @@ const useHeader = config.branding.top_logos_enabled;
     </script>
   </body>
 </html>
-<style define:vars={{ siteColor }}>
+<style define:vars={{ siteColor, backgroundColor, textColor }}>
   body {
     height: 100%;
   }
@@ -77,7 +78,7 @@ const useHeader = config.branding.top_logos_enabled;
   .slot-container {
     bottom: 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     margin: 50px 0;
     position: absolute;
     top: 0;
@@ -86,8 +87,8 @@ const useHeader = config.branding.top_logos_enabled;
 
   header {
     align-items: center;
-    background-color: var(--gray-900);
-    border-bottom: 1px solid var(--gray-200);
+    background-color: var(--backgroundColor);
+    border-bottom: 1px solid var(--textColor);
     box-sizing: border-box;
     display: flex;
     height: 50px;
@@ -100,8 +101,8 @@ const useHeader = config.branding.top_logos_enabled;
 
   footer {
     align-items: center;
-    background-color: var(--gray-900);
-    border-top: 1px solid var(--gray-200);
+    background-color: var(--backgroundColor);
+    border-top: 1px solid var(--textColor);
     bottom: 0;
     display: flex;
     height: 50px;
@@ -119,14 +120,14 @@ const useHeader = config.branding.top_logos_enabled;
   }
 
   .platform {
-    color: white;
+    color: var(--textColor);
   }
 
   .separator {
     width: 2px;
     height: 20px;
     margin-left: 5px;
-    background-color: white;
+    background-color: var(--textColor);
   }
 
   .site_name {
@@ -135,7 +136,7 @@ const useHeader = config.branding.top_logos_enabled;
   }
 
   .blurb {
-    color: white;
+    color: var(--textColor);
     font-size: 14px;
   }
 
