--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -1,8 +1,8 @@
 ---
 import { getLangFromUrl } from '@i18n';
 import config from 'src/config.json';
-import Footer from './Footer';
-import Header from './Header';
+import Footer from '../branding/Footer';
+import Header from '../branding/Header';
 
 import '@themes/default/index.css';
 
@@ -154,3 +154,4 @@ const backgroundColor = config.branding.background_color;
     height: 45px;
   }
 </style>
+../branding/Header
