--- a/src/components/AnnotationDesktop/LayersPanel/LayersPanel.css
+++ b/src/components/AnnotationDesktop/LayersPanel/LayersPanel.css
@@ -1,8 +1,27 @@
 .layer-configuration {
   height: 100%;
   overflow-y: scroll;
-  padding: 15px 20px;
+  padding: 10px;
   font-size: var(--font-tiny);
+}
+
+.layer-configuration .layer-configuration-section {
+  background-color: #fff;
+  border: 1px solid var(--gray-200);
+  border-radius: var(--border-radius);
+  margin-bottom: 10px;
+  padding: 10px 20px;
+}
+
+.layer-configuration .layer-configuration-section .layer-configuration-selection {
+  display: flex;
+  justify-content: space-between;
+}
+
+.layer-configuration .layer-configuration-section button.select-trigger {
+  all: unset;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .layer-configuration label {
@@ -11,7 +30,7 @@
 }
 
 .layer-configuration-legend {
-  font-size: var(--font-small);
+  font-size: var(--font-tiny);
   padding: 15px 0;
 }
 
@@ -30,8 +49,6 @@
 .layer-configuration-legend li .legend-color {
   border-radius: var(--border-radius);
   display: inline-block;
-  height: 17px;
-  position: relative;
-  top: -1px;
-  width: 17px;
+  height: 16px;
+  width: 16px;
 }
