--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { getLangFromUrl } from '@i18n';
+import config from '../config.json';
 
 import '@themes/default/index.css';
 
@@ -8,6 +9,8 @@ export interface Props {
 }
 
 const { title } = Astro.props;
+
+const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 ---
 
 <!DOCTYPE html>
@@ -16,6 +19,7 @@ const { title } = Astro.props;
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
+    <link rel="icon" type="image/x-icon" href={favicon}>
     <title>{title}</title>
   </head>
   <body>
