Disabled 'Invite' button + added a warning if users has no (nick)name set

--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -128,6 +128,7 @@
   --gray-50: #f6f7f9;
 
   --red-500: #da1e26;
+  --red-500-10: #da1e261a;
   --red-200: #f25158;
   --orange-500: #ffa929;
   --green-500: #11a011;
