--- a/src/apps/project-collaboration/ProjectCollaboration.css
+++ b/src/apps/project-collaboration/ProjectCollaboration.css
@@ -7,6 +7,22 @@
   justify-content: space-between;
 }
 
+.project-collaboration p.anonymous-warning {
+  background-color: var(--red-500-10);
+  border: 1px solid var(--red-500);
+  border-radius: var(--border-radius);
+  color: var(--red-500);
+  font-size: var(--font-small);
+  max-width: 60ch;
+  margin: 1em 0 1em 0;
+  padding: 0.4em 0.6em;
+}
+
+.project-collaboration p.anonymous-warning a {
+  color: var(--red-500);
+  text-decoration: underline;
+}
+
 .invite-users.dialog-content .error {
   color: var(--red-500);
   font-size: var(--font-tiny);
