Turned nag dialog button into a link (semantics)

--- a/src/themes/default/button/danger.css
+++ b/src/themes/default/button/danger.css
@@ -1,5 +1,7 @@
 button.danger,
-button.danger:disabled {
+button.danger:disabled,
+a[href].button.danger,
+a[href].button.danger:disabled {
   border-color: var(--red-500);
   background-color: var(--red-500);
   color: #fff;
