Bugfix: removed TEI graphic 'display:none' rule

--- a/src/apps/annotation-text/TEI.css
+++ b/src/apps/annotation-text/TEI.css
@@ -573,7 +573,7 @@ tei-graph {
   /* Empty for now */
 }
 tei-graphic {
-  display:none;
+  /* Empty Rule Set */
 }
 tei-group {
   /* Empty Rule Set */
