--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -90,6 +90,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
     display: flex;
     flex-direction: row;
     height: 100%;
+    position: relative;
   }
 
   body {
