--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -104,6 +104,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
     flex-grow: 1;
     min-height: 100%;
     position: relative;
+    overflow-y: scroll;
   }
 
   header {
