--- a/src/apps/user-management/UserManagement.css
+++ b/src/apps/user-management/UserManagement.css
@@ -3,6 +3,14 @@
   clear: both;
 }
 
+.user-management-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .user-management button.select-trigger {
   justify-content: space-between;
 }
