--- a/src/layouts/HeaderLayout.astro
+++ b/src/layouts/HeaderLayout.astro
@@ -26,7 +26,7 @@ const favicon = `/${config.branding.favicon}` || '/favicon.svg';
 <html lang={getLangFromUrl(Astro.url)}>
   <head>
     <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width' />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name='generator' content={Astro.generator} />
     <link rel="icon" type="image/x-icon" href={favicon}>
     <title>{title}</title>
