--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -1,3 +1,9 @@
+.r6o-highlight-layer {
+  box-sizing: border-box;
+  border: 2px solid red;
+  z-index: 99999 !important;
+}
+
 .content-wrapper {
   display: flex;
   justify-content: center;
