--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -95,6 +95,7 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
   body {
     display: flex;
     flex-direction: row;
+    min-height: 100vh;
     position: relative;
   }
 
