--- a/src/apps/annotation-image/ImageAnnotationDesktop.css
+++ b/src/apps/annotation-image/ImageAnnotationDesktop.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
   overscroll-behavior: none;
   width: 100%;
 }
@@ -13,11 +14,13 @@
   flex-direction: row;
   flex-grow: 1;
   position: relative;
+  overflow: auto;
 }
 
 .ia-annotated-image-container {
   flex-grow: 1;
   height: 100%;
+  overflow: hidden;
   position: relative;
   width: 100%;
 }
