--- a/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
+++ b/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
@@ -1,7 +1,9 @@
 .anno-right-drawer {
   overflow-y: scroll;
   pointer-events: auto;
+  position: relative;
   scroll-padding: 20px;
+  width: 420px;
   z-index: 1;
 }
 
@@ -9,6 +11,10 @@
   background-color: var(--gray-50);  
   box-sizing: border-box;
   border-top: 1px solid var(--gray-200);
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .anno-right-drawer:not([data-collapsed]) {
@@ -18,9 +24,6 @@
     0px 0px 16px -12px rgba(0, 0, 0, 0.32),
     0px 0px 2px 0px rgba(0, 0, 0, 0.28);
 }
-
-
-
 
 .view-menu .close {
   text-align: right;
