--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -113,6 +113,7 @@
   --dark-blue: #07498a;
   --bright-blue: #07529a;
   --brighter-blue: #0969c3;
+  --light-blue: #88bcf7;
   --sand: #987116;
   --mud-gray: #808073;
   --orange: #e9b44a;
