--- a/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
+++ b/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
@@ -1,23 +1,18 @@
-.anno-right-drawer {
-  overflow-y: scroll;
-  pointer-events: auto;
-  position: relative;
-  scroll-padding: 20px;
-  width: 420px;
-  z-index: 1;
+.ia-right-drawer {
+  background-color: var(--gray-100);
+  right: 0;
+  scroll-padding: 40px;
+  top: 0;
+  transform: translateX(360px);
+  width: 360px;
 }
 
-.anno-sidebar-container aside {
-  background-color: var(--gray-50);  
+.ia-right-drawer aside {
   box-sizing: border-box;
   border-top: 1px solid var(--gray-200);
-  position: absolute;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
-.anno-right-drawer:not([data-collapsed]) {
+.ia-right-drawer:not([data-collapsed]) {
   box-shadow:
     0px 0px 16px -1px rgba(0, 0, 0, 0.15),
     0px 0px 16px -8px rgba(0, 0, 0, 0.25), 
