--- a/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
+++ b/src/components/AnnotationDesktop/RightDrawer/RightDrawer.css
@@ -9,7 +9,7 @@
 
 .ia-right-drawer aside {
   box-sizing: border-box;
-  border-top: 1px solid var(--gray-200);
+  padding: 0 5px;
 }
 
 .ia-right-drawer:not([data-collapsed]) {
