Re-enabled notification pips on layers + notes menu icon

--- a/src/apps/annotation-image/Menubar/Menubar.css
+++ b/src/apps/annotation-image/Menubar/Menubar.css
@@ -67,7 +67,7 @@
   color: var(--font-dark);
 }
 
-.ia-menubar :is(button, a.button) + :is(button, a.button) {
+.ia-menubar :is(button, a.button, .with-notification) + :is(button, a.button, .with-notification) {
   margin-left: 2px;
 }
 
