--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -1,5 +1,11 @@
 .anno-desktop {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  overscroll-behavior: none;
   pointer-events: none;
+  width: 100%;
 }
 
 .anno-desktop-left {
