--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -1,9 +1,12 @@
 .ta-desktop main {
+  display: flex;
+  flex-direction: row;
   overflow: hidden;
 }
 
 .ta-desktop main .ta-annotated-text-container {
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   overflow-y: scroll;
 }
@@ -15,6 +18,7 @@
   border-width: 0 1px;
   font-family: Lora;
   font-size: 17px;
+  height: fit-content;
   line-height: 190%;
   min-height: 100%;
   padding: 70px 85px 140px 85px;
@@ -23,14 +27,6 @@
   width: 60ch;
   word-wrap: break-word;
 }
-
-.r6o-highlight-layer {
-  box-sizing: border-box;
-  z-index: 99 !important;
-}
-
-
-
 
 .content-wrapper.text main {
   height: fit-content;
@@ -63,12 +59,12 @@
   overflow-y: scroll;
 }
 
-.a9s-popup {
-  z-index: 999;
-}
-
 .content-wrapper.text main p.plaintext {
   margin: 0;
+}
+
+.a9s-popup {
+  z-index: 999;
 }
 
 .content-wrapper main img {
@@ -131,4 +127,10 @@
 
 .ta-toolbar section {
   padding: 6px;
+}
+
+.ta-drawer {
+  overflow-y: auto;
+  pointer-events: auto;
+  z-index: 1;
 }
