--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -211,4 +211,29 @@
   padding-left: 10px;
 }
 
+.anno-menubar .with-notification {
+  display: inline-block;
+  position: relative;
+}
+
+.anno-menubar .notification-bubble {
+  all: unset;
+  align-items: center;
+  background-color: var(--bright-blue);
+  border-radius: 999px;
+  border: 1px solid #fff;
+  color: #fff !important;
+  display: flex;
+  gap: 1px;
+  font-size: 9px;
+  height: 13px;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: -2px;
+  top: -2px;
+  width: 13px;
+}
+
 
