CSS fix: applying text wrapper style to TEI wrapper, too

--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -32,7 +32,8 @@
   height: fit-content;
 }
 
-.content-wrapper .text {
+.content-wrapper .text,
+.content-wrapper .tei {
   background-color: #fff;
   border-color: var(--gray-300);
   border-style: solid;
