--- a/src/apps/annotation-image/Toolpanel/Toolpanel.css
+++ b/src/apps/annotation-image/Toolpanel/Toolpanel.css
@@ -3,6 +3,7 @@
   bottom: 20px;
   display: flex;
   justify-content: center;
+  pointer-events: none;
   position: absolute;
   width: 100%;
 }
@@ -11,6 +12,7 @@
   border: none;
   border-radius: 50%;
   margin: 0 6px;
+  pointer-events: all;
   transition: opacity 250ms ease-in-out;
   width: 38px;
 }
