--- a/src/components/Annotation/ReplyForm/MobileReplyForm.css
+++ b/src/components/Annotation/ReplyForm/MobileReplyForm.css
@@ -1,10 +1,18 @@
 .mobile-reply-form {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   left: 0;
   position: absolute;
   top: 0;
   width: 100%;
   z-index: 10;
+}
+
+.mobile-reply-form-close {
+  right: 20px;
+  position: absolute;
+  top: 20px;
 }
 
 .mobile-reply-form textarea {
