--- a/src/components/Annotation/ReplyForm/MobileFallback.css
+++ b/src/components/Annotation/ReplyForm/MobileFallback.css
@@ -1,7 +1,7 @@
 .mobile-reply-form {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  bottom: 0;
   left: 0;
   position: absolute;
   top: 0;
