--- a/src/apps/user-management/UserManagement.css
+++ b/src/apps/user-management/UserManagement.css
@@ -1,14 +1,20 @@
 .user-management {
+  box-sizing: context-box;
+}
+.user-management-content {
   padding: 20px 40px;
   clear: both;
 }
 
 .user-management-header {
+  box-sizing: border-box;
+  padding: 20px 40px;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  background-color: #fff;
 }
 
 .user-management button.select-trigger {
