--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -8,6 +8,8 @@
   background-color: rgba(255, 0, 0, 0.1);
   box-sizing: border-box;
   border: 2px solid green;
+  height: 100%;
+  bottom: auto;
 }
 
 .ta-desktop main .ta-annotated-text-container {
