--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -8,7 +8,9 @@
   background-color: rgba(255, 0, 0, 0.1);
   box-sizing: border-box;
   border: 2px solid green;
-  height: 100%;
+  height: 100vh;  
+  height: 100dvh;
+  max-height: -webkit-fill-available;
   bottom: auto;
 }
 
