--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -1,3 +1,19 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overscroll-behavior: none;
+}
+
+.anno-desktop.ta-desktop {
+  border: 5px solid green;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
 .ta-desktop main {
   display: flex;
   flex-direction: row;
@@ -7,8 +23,8 @@
 .ta-desktop main .r6o-annotatable canvas {
   background-color: rgba(255, 0, 0, 0.1);
   box-sizing: border-box;
-  border: 2px solid green;
-  height: 90svh;  
+  border: 2px solid blue;
+  height: 100dvh;  
   max-height: -webkit-fill-available;
   bottom: auto;
 }
