--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -1,6 +1,7 @@
 .anno-desktop {
   display: flex;
   flex-direction: column;
+  height: 100%;
   height: 100dvh;
   overflow: hidden;
   overscroll-behavior: none;
