--- a/src/apps/annotation-text/TextAnnotationDesktop.css
+++ b/src/apps/annotation-text/TextAnnotationDesktop.css
@@ -9,14 +9,13 @@ html, body {
   overflow: hidden;
 }
 
+/*
 .ta-desktop main .r6o-annotatable canvas {
-  background-color: rgba(255, 0, 0, 0.1);
-  box-sizing: border-box;
-  border: 2px solid blue;
   height: 100dvh;  
   max-height: -webkit-fill-available;
   bottom: auto;
 }
+*/
 
 .ta-desktop main .ta-annotated-text-container {
   display: flex;
