--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -7,7 +7,6 @@ import { ImageAnnotation } from '@apps/annotation-image';
 import { TextAnnotation } from '@apps/annotation-text';
 import { getDocumentInContext } from '@backend/helpers';
 import { getCollection } from '@backend/crud/collections';
-import type { Collection } from 'src/Types';
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -39,8 +38,9 @@ if (document.error || !document.data) {
 
 // If the document is part of a collection, see if it has custom css
 let styleSheet;
+
 if (document.data.collection_id) {
-  console.info(`Collection found, id: ${document.data.collection_id}`);
+  // console.info(`Collection found, id: ${document.data.collection_id}`);
   const resp = await getCollection(supabase, document.data.collection_id);
   if (!resp.error && resp.data) {
     styleSheet = resp.data.custom_css;
@@ -71,6 +71,10 @@ if (document.data.content_type === 'text/plain') {
 }
 ---
 <BaseLayout title={document.data.name}>
+  {viewer === 'TEI' && !styleSheet && (
+    <link rel="stylesheet" href="/tei.css" slot="head">
+  )}
+
   {viewer === 'OPENSEADRAGON' ? (
     <ImageAnnotation
       client:only
